--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             text-align: center;
         }
     </style>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9992694285997950"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
