--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         event.preventDefault();
         loadingGif.style.display = "inline-block";
         lupe.style.display = "none";
-        const url = 'http://' + "localhost:8080" + '/api/cards?query=' + pokemon.value;
+        const url = 'http://' + window.location.host + '/api/cards?query=' + pokemon.value;
         fetch(url, {
             method: 'GET',
             responseType: 'blob'
