Removed duplicate onclick from createexcell button

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </div>
             </div>
             <div class="box">
-                <button id="exportExcell" type="submit" style="display: none;" onclick="createExcell()">
+                <button id="exportExcell" type="submit" style="display: none;">
                     export to excell
 
                 </button>
