function moved to front

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             height: 100vh;
         }
 
+        .cards {
+            transition: box-shadow 0.3s ease-in-out;
+        }
+
+        .cards:hover {
+            box-shadow: 20px 20px 50px 15px rgb(0, 0, 0, 0.4);
+            border: 1px black;
+        }
+
         .box {
             padding: 10px;
             margin-bottom: 10px;
@@ -227,7 +236,7 @@
 
 </body>
 
-<script type="module" src="main.js">
+<script src="main.js">
 
 </script>
 
