--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
-    <script src="node_modules/xlsx/dist/xlsx.full.min.js"></script>
+    <script src="public/xlsx/dist/xlsx.full.min.js"></script>
     <style>
         .container {
             display: flex;
