--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="box">
-                <button id="exportExcell" type="submit" style="display: none;">
+                <button id="exportExcell" onclick="createExcell()" type="submit" style="display: none;">
                     export to excell
 
                 </button>
