--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="public/xlsx/dist/xlsx.full.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.3.0/exceljs.min.js"></script>
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9992694285997950"
         crossorigin="anonymous"></script>
     <script src="main.js">
@@ -41,7 +43,7 @@
                 </div>
             </div>
             <div class="box">
-                <button id="exportExcell" onclick="createExcell()" type="submit" style="display: none;">
+                <button id="exportExcell" type="submit" style="display: none;">
                     export to excell
 
                 </button>
