--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                 </div>
             </div>
             <div class="box">
-                <button id="prev"><i class="fas fa-arrow-left"></i></button>
-                <button id="next"><i class="fas fa-arrow-right"></i></button>
+                <div id="paging" class="paging">
+                    <button id="prev" class="count-btn"><i class="fas fa-arrow-left"></i></button>
+                    <button id="next" class="count-btn"><i class="fas fa-arrow-right"></i></button>
+                </div>
                 <div id="loading" class="presentation" style="display: none;">Loading...</div>
                 <button id="exportExcell" type="submit" style="display: none;">
                     export to excell
